Update German translations

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -5,7 +5,7 @@
   "New wallet": "Neue Wallet",
   "Import wallet": "Wallet importieren",
   "Amount must be greater than {{ minAmountInAlph }}": "Betrag muss größer sein als {{ minAmountInAlph }}",
-  "Could not connect to the {{ currentNetwork }} network.": "Konnte keine Netzwerkverbindung herstellen.",
+  "Could not connect to the {{ currentNetwork }} network.": "Konnte keine Verbindung zum {{ currentNetwork }} Netzwerk herstellen.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Beachten Sie, dass bei Aktivierung, \"{{ address }}\" nicht mehr die Standardadresse sein wird.",
   "Error while sweeping address {{ from }}": "Fehler beim entleeren der Adresse {{ from }}",
   "Remove wallet \"{{ walletName }}\"": "Wallet entfernen \"{{ walletName }}\"",
@@ -37,13 +37,13 @@
   "TOTAL BALANCE": "GESAMTSALDO",
   "AVAILABLE": "VERFÜGBAR",
   "LOCKED": "GESPERRT",
-  "Could not fetch data because the wallet is offline": "Daten konnten nich abgerufen werden, da die Wallet offline ist",
+  "Could not fetch data because the wallet is offline": "Daten konnten nicht abgerufen werden, da die Wallet offline ist",
   "Unknown wallet name": "Unbekannter Walletname",
   "To remove this address from being the default address, you must set another one as default first.": "Um diese Adresse nicht mehr als Standardadresse zu verwenden, müssen Sie zuerst eine andere festlegen.",
   "Address options": "Adressoptionen",
   "Sweep address": "Adresse entleeren",
   "Sweep all the unlocked funds of this address to another address.": "Alle nicht gesperrten Guthaben dieser Adresse auf eine andere Adresse übertragen.",
-  "Sweep": "entleeren",
+  "Sweep": "Entleeren",
   "Cancel": "Abbrechen",
   "Save": "Speichern",
   "Error while building transaction": "Fehler beim Erstellen der Transaktion",
@@ -244,7 +244,7 @@
   "Tokens to issue (optional)": "Tokens to issue (optional)",
   "Gas": "Gas",
   "Review": "Review",
-  "Invalid address group for the WallectConnect connection": "Invalide Adressgruppe für die WallectConnect connection",
+  "Invalid address group for the WallectConnect connection": "Invalide Adressgruppe für die WallectConnect Verbindung",
   "Error in pairing": "Error in pairing",
   "WalletConnect error": "WalletConnect error",
   "Try again": "Versuchen Sie es erneut",
@@ -270,7 +270,7 @@
   "Update": "Update",
   "Download failed, try again later.": "Download fehlgeschlagen, versuchen Sie es später erneut.",
   "Optional passphrase": "Optionale Passphrase",
-  "Pending": "ausstehend",
+  "Pending": "Ausstehend",
   "Mainnet": "Mainnet",
   "Testnet": "Testnet",
   "Localhost": "Localhost",
