Fix corrupt JSON file and move to proper folder

--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -122,7 +122,7 @@
   "Inputs": "Entradas",
   "Outputs": "Saídas",
   "New version": "Nova versão",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "A versão {{ newVersion }} está disponível. Clique em \"Update"\ para evitar qualquer problema com a carteira.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "A versão {{ newVersion }} está disponível. Clique em \"Update\" para evitar qualquer problema com a carteira.",
   "Download": "Descarregar",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Por favor, certifique-se que tem a sua frase de recuperação guardada e armazenada num local seguro para restaurar a sua carteira no futuro. Sem a frase de recuperação, a sua carteira ficará irrecuperável e permanentemente perdida.",
   "Not your keys, not your coins.": "Se não são as suas chaves, não são as suas moedas.",
@@ -198,7 +198,7 @@
   "Your Wallet": "A sua carteira",
   "Your address": "O seu endereço",
   "I've copied the words, continue": "Copiei as palavras, continuar",
-  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "As operações avançadas são reservadas aos utilizadores mais experientes. Um utilizador \normal\ não deve precisar de as utilizar com muita frequência, se de todo.",
+  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "As operações avançadas são reservadas aos utilizadores mais experientes. Um utilizador \"normal\" não deve precisar de as utilizar com muita frequência, se de todo.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Parece que a sua carteira tem demasiados UTXOs para poder enviar esta transacção. Por favor, consolide (fundir) os seus UTXOs primeiro. Isto irá custar uma pequena taxa.",
   "Welcome!": "Bem-vindo!",
   "Welcome back!": "Bem-vindo de novo!",
@@ -212,7 +212,7 @@
   "Reduce": "Reduza",
   "Show addresses": "Mostrar endereços",
   "More info": "Mais informação",
-  "passphraseWarningMessage": "<0>Esta é uma funcionalidade avançada!</0>>br />Utilize-a apenas se souber o que está a fazer.<br />Leia a nossa <5>documentação</5> para saber mais".,
+  "passphraseWarningMessage": "<0>Esta é uma funcionalidade avançada!</0><br />Utilize-a apenas se souber o que está a fazer.<br />Leia a nossa <5>documentação</5> para saber mais.",
   "welcomeScreenPassphraseMessage": "Se quiser usar uma <1>passphrase</1>, bloqueie a sua carteira recém-criada.",
   "I have read and understood the documentation": "Li e compreendi a documentação",
   "Use optional passphrase (advanced)": "Usar a frase-chave opcional (avançado)",
@@ -267,7 +267,7 @@
   "Unable to convert the amount": "Incapaz de converter o montante",
   "The amount must be greater than {{ minAmount }}": "O montante deve ser superior a {{ minAmount }}",
   "Restart the application to install the new update.": "Reinicie a aplicação para instalar a nova atualização.",
-  "Downloaded {{ percent }}%": "{{ percent }}% descarregado"
+  "Downloaded {{ percent }}%": "{{ percent }}% descarregado",
   "Update": "Atualizar",
   "Download failed, try again later.": "O descarregamento falhou, tente novamente mais tarde.",
   "Optional passphrase": "Frases-passe opcionais",
