Minor fixes in Portuguese translations

--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -122,7 +122,7 @@
   "Inputs": "Entradas",
   "Outputs": "Saídas",
   "New version": "Nova versão",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "A versão {{ newVersion }} está disponível. Clique em \"Update\" para evitar qualquer problema com a carteira.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "A versão {{ newVersion }} está disponível. Clique em \"Atualizar\" para evitar qualquer problema com a carteira.",
   "Download": "Descarregar",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Por favor, certifique-se que tem a sua frase de recuperação guardada e armazenada num local seguro para restaurar a sua carteira no futuro. Sem a frase de recuperação, a sua carteira ficará irrecuperável e permanentemente perdida.",
   "Not your keys, not your coins.": "Se não são as suas chaves, não são as suas moedas.",
@@ -190,7 +190,7 @@
   "Everything is ready!": "Tudo está pronto!",
   "Welcome to Alephium.": "Bem-vindo a Alephium.",
   "Let's go!": "Vamos lá!",
-  "welcomeScreenOneAddressPerGroupMessage": "Utilizador avançado: pretende começar com <1>one address per group for mining or DeFi?</1>",
+  "welcomeScreenOneAddressPerGroupMessage": "Utilizador avançado: pretende começar com <1>um endereço por grupo para mineração ou DeFi?</1>",
   "Show advanced options": "Mostrar opções avançadas",
   "Hide advanced options": "Ocultar opções avançadas",
   "For mining or DeFi use.": "Para mineração ou uso DeFi.",
