Further German fixes

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -84,8 +84,8 @@
   "Duration in minutes after which an idle wallet will lock automatically.": "Dauer in Minuten, nach der eine inaktive Wallet automatisch gesperrt wird.",
   "Minutes": "Minuten",
   "Off": "Aus",
-  "Theme": "Motiv",
-  "Select the theme and please your eyes.": "Wählen Sie das Motiv und erfreuen Sie sich am Anblick.",
+  "Theme": "Erscheinungsbild",
+  "Select the theme and please your eyes.": "Wählen Sie das Erscheinungsbild und erfreuen Sie sich am Anblick.",
   "Toggle discreet mode (hide amounts).": "Diskreter Modus (Beträge verbergen).",
   "Password requirement": "Passwort erforderlich",
   "Require password confirmation before sending each transaction.": "Vor jeder Transaktion eine Passwortbestätigung verlangen.",
@@ -197,7 +197,7 @@
   "Your Wallet": "Ihre Wallet",
   "Your address": "Ihre Adresse",
   "I've copied the words, continue": "Ich habe die Worte kopiert, weiter",
-  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Fortgeschrittene Tätigkeit die erfahreneren Benutzern vorbehalten sind. Ein \"normaler\" Benutzer sollte sie nicht sehr oft, wenn überhaupt, verwenden müssen.",
+  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Fortgeschrittene Funktionen die erfahreneren Benutzern vorbehalten sind. Ein \"normaler\" Benutzer sollte sie nicht sehr oft, wenn überhaupt, verwenden müssen.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Es scheint, dass Ihre Wallet zu viele UTXOs hat, um diese Transaktion senden zu können. Bitte konsolidieren (fusionieren) Sie zunächst Ihre UTXOs. Dies wird eine kleine Gebühr kosten.",
   "Welcome!": "Willkommen!",
   "Welcome back!": "Willkommen zurück!",
@@ -241,12 +241,12 @@
   "Call contract": "Call contract",
   "Deploy contract": "Deploy contract",
   "Issue token amount": "Issue token amount",
-  "Tokens to issue (optional)": "Tokens to issue (optional)",
+  "Tokens to issue (optional)": "Auszugebende Token (optional)",
   "Gas": "Gas",
-  "Review": "Review",
+  "Review": "Überprüfen",
   "Invalid address group for the WallectConnect connection": "Invalide Adressgruppe für die WallectConnect Verbindung",
-  "Error in pairing": "Error in pairing",
-  "WalletConnect error": "WalletConnect error",
+  "Error in pairing": "Fehler beim Pairing",
+  "WalletConnect error": "WalletConnect Fehler",
   "Try again": "Versuchen Sie es erneut",
   "Connect to a dApp": "Verbinden zu einer dApp",
   "Paste what was copied from the dApp": "Fügen Sie ein was von der dApp kopiert wurde",
