Remove extra dot

--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -277,5 +277,5 @@
   "Localhost": "Localhost",
   "Delete": "Удалить",
   "Timestamp": "Временная метка",
-  "Lock time must be in the future.": "Время блокировки должно быть в будущем.."
+  "Lock time must be in the future.": "Время блокировки должно быть в будущем."
 }
