--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -313,7 +313,7 @@
   "Smart contract": "Smart contract",
   "All transactions loaded!": "All transactions loaded!",
   "Tokens": "Tokens",
-  "Today": "Heute",
+  "Value today": "Value today",
   "NFTs": "NFTs",
   "Coming soon!": "Coming soon!",
   "Address tokens": "Address tokens",
@@ -354,5 +354,6 @@
   "Wallet name updated to: {{ newWalletName }}": "Wallet name updated to: {{ newWalletName }}",
   "Delete": "Löschen",
   "Timestamp": "Zeitpunkt",
-  "Lock time must be in the future.": "Sperrzeit muss in der Zukunft liegen."
+  "Lock time must be in the future.": "Sperrzeit muss in der Zukunft liegen.",
+  "Shortcuts": "Shortcuts"
 }
