change meanings for context- appropriate

--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -81,7 +81,7 @@
   "Error while sending the transaction": "Đã xãy ra lỗi trong quá trình thực hiện giao dịch",
   "Enter your password to send the transaction.": "Nhập mật khẩu để thực hiện giao dịch.",
   "Lock time": "Thời gian khoá",
-  "Duration in minutes after which an idle wallet will lock automatically.": "Ví sẽ được tự động khoá bảo vệ nếu không có bất kỳ hoạt động nào.",
+  "Duration in minutes after which an idle wallet will lock automatically.": "Thời gian tự động kích hoạt khoá bảo vệ Ví nếu không có bất kỳ hoạt động nào.",
   "Minutes": "Phút",
   "Off": "Tắt",
   "Theme": "Giao diện",
@@ -118,8 +118,8 @@
   "Total value": "Tổng giá trị",
   "Click to see more": "Xem thêm",
   "Click to see less": "Thu lại",
-  "Inputs": "Inputs",
-  "Outputs": "Outputs",
+  "Inputs": "Nguồn vào",
+  "Outputs": "Nguồn ra",
   "New version": "Phiên bản mới",
   "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng nhấn \"Cập nhật\" để khắc phục những lỗi đang hiện có.",
   "Download": "Tải về",
@@ -224,8 +224,8 @@
   "Close": "Đóng",
   "Tab navigation": "Tab điều hướng",
   "Make this your default address": "Gán thành địa chỉ ví mặc định",
-  "into": "into",
-  "out from": "out from",
+  "into": "vào trong",
+  "out from": "ra khỏi",
   "Transaction details": "Chi tiết giao dịch",
   "Copy address": "Sao chép địa chỉ",
   "Custom": "Tuỳ chỉnh",
