--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -35,9 +35,7 @@
   "No transactions to display": "Sem transações a exibir",
   "Invalid password": "Palavra-passe inválida",
   "Submit": "Submeter",
-  "TOTAL BALANCE": "SALDO TOTAL",
-  "AVAILABLE": "DISPONÍVEL",
-  "LOCKED": "BLOQUEADA",
+  "Locked": "Bloqueada",
   "Could not fetch data because the wallet is offline": "Não foi possível ir buscar os dados porque a carteira está offline",
   "Unknown wallet name": "Nome de carteira desconhecida",
   "To remove this address from being the default address, you must set another one as default first.": "Para remover este endereço de ser o endereço por defeito, deve primeiro definir outro como endereço por defeito.",
