Add header in Transfers page

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -358,5 +358,7 @@
   "Raw amount": "Raw amount",
   "Unknown token": "Unknown token",
   "Unknown tokens": "Unknown tokens",
-  "Copy token hash": "Copy token hash"
+  "Copy token hash": "Copy token hash",
+  "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
+  "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!"
 }
