--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -360,5 +360,14 @@
   "Unknown tokens": "Unknown tokens",
   "Copy token hash": "Copy token hash",
   "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
-  "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!"
+  "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!",
+  "Last 24h": "Last 24h",
+  "Last week": "Last week",
+  "Last month": "Last month",
+  "Last 6 months": "Last 6 months",
+  "Last 12 months": "Last 12 months",
+  "Previous year": "Previous year",
+  "This year": "This year",
+  "Period": "Period",
+  "Select a period": "Select a period"
 }
