--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -369,5 +369,6 @@
   "Previous year": "Previous year",
   "This year": "This year",
   "Period": "Period",
-  "Select a period": "Select a period"
+  "Select a period": "Select a period",
+  "Your CSV is being compiled in the background": "Your CSV is being compiled in the background"
 }
