Add directions filtering option

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -375,5 +375,7 @@
   "{{ number }} selected": "{{ number }} selected",
   "All selected": "All selected",
   "Select all": "Select all",
-  "Unselect all": "Unselect all"
+  "Unselect all": "Unselect all",
+  "Directions": "Directions",
+  "Select directions": "Select directions"
 }
