Add assets filter in transaction list

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -377,5 +377,6 @@
   "Select all": "Select all",
   "Unselect all": "Unselect all",
   "Directions": "Directions",
-  "Select directions": "Select directions"
+  "Select directions": "Select directions",
+  "Select assets": "Select assets"
 }
