Add reset filters button

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -378,5 +378,6 @@
   "Unselect all": "Unselect all",
   "Directions": "Directions",
   "Select directions": "Select directions",
-  "Select assets": "Select assets"
+  "Select assets": "Select assets",
+  "Reset filters": "Reset filters"
 }
