--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -1,5 +1,5 @@
 {
-  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Varsayılan olarak adres rastgele grup içinte üretildi. Gelişmiş seçenekleri kullanarak adresin üretilmesini istediğiniz grubu seçebilirsiniz.",
+  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Varsayılan olarak adres rastgele grup içinde üretildi. Gelişmiş seçenekleri kullanarak adresin üretilmesini istediğiniz grubu seçebilirsiniz.",
   "Use an existing wallet": "Varolan bir cüzdanı kullan",
   "Please choose whether you want to create a new wallet or import an existing one.": "Lütfen yeni bir cüzdan oluşturmak mı ya da varolan cüzdanı içe aktarmak mı istediğinizi seçin.",
   "New wallet": "Yeni cüzdan",
@@ -10,9 +10,9 @@
   "Error while sweeping address {{ from }}": "{{ from }} 'dan sürükleme adresinde hata oluştu",
   "Remove wallet \"{{ walletName }}\"": " \"{{ walletName }}\" cüzdanını kaldır",
   "Enter password for \"{{ switchToWalletName }}\"": " \"{{ switchToWalletName }}\" için şifre girin",
-  "{{ amount }} words entered": "{{ amount }} kelime girildi",
+  "{{ amount }} words entered": "{{ amount }} kelimeler girildi",
   "Address label": "Adres etiketi",
-  "The wallet is offline.": "Cüzdan çevirimdışı.",
+  "The wallet is offline.": "Cüzdan çevrim dışı.",
   "Discreet mode": "Gizli mod",
   "Default address": "Varsayılan adres",
   "Settings": "Ayarlar",
@@ -21,7 +21,7 @@
   "Copied": "Kopyalandı",
   "Official Wallet": "Resmi Cüzdan",
   "The easiest way to get started with Alephium.": "Alephium ile başlamanın en kolay yolu.",
-  "Genesis TX": "Genesis TX",
+  "Genesis TX": "Blokzincir oluşum işlemi",
   "Mining Rewards": "Madencilik ödülleri",
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Yeterli bakiyeye sahip adres mevcut değil. Lütfen adresinize bakiye ekleyerek tekrar deneyiniz.",
   "Select": "Seç",
@@ -42,7 +42,7 @@
   "To remove this address from being the default address, you must set another one as default first.": "Bu adresi varsayılan adresten kaldırmak için öncelikle bir başka varsayılan adres belirlemelisiniz.",
   "Address options": "Adres seçenekleri",
   "Sweep address": "Sürükleme adresi",
-  "Sweep all the unlocked funds of this address to another address.": "Bu adresin kilidi açılmış tüm paralarını bir başka adrese sürükleyin.",
+  "Sweep all the unlocked funds of this address to another address.": "Bu adresin kilidi açılmış tüm varlıkları bir başka adrese sürükleyin.",
   "Sweep": "Sürükle",
   "Cancel": "İptal",
   "Save": "Kaydet",
@@ -52,7 +52,7 @@
   "To address": "Adrese",
   "Select the address to sweep the funds to.": "Paraların hangi adrese sürükleneceğini seçin.",
   "sweepOperationFromTo": "Bu işlem tüm paraları <1>{{ from }}</1> ' den sürükleyip <3>{{ to }}</3> 'e transfer edecek.",
-  "Consolidate UTXOs": "UTXO (işlemleri) birleştir",
+  "Consolidate UTXOs": "UTXO'ları birleştir",
   "Fee": "Ücret",
   "Consolidate": "Birleştir",
   "The group number will be automatically be appended to the addresses’ label.": "Grup numarası otomatik olarak adreslerin etiketlerine eklenecektir.",
@@ -67,7 +67,7 @@
   "No recovery phrase was stored along with this wallet": "Bu cüzdan için kurtarma sözcükleri kaydedilmedi",
   "Expected fee": "Beklenen ücret",
   "Address format is incorrect": "Adres biçimi yanlış",
-  "Select the address to send funds from.": "Paranın gönderileceği adresi seçin.",
+  "Select the address to send funds from.": "Varlığın gönderileceği adresi seçin.",
   "Recipient's address": "Alıcının adresi",
   "Advanced settings": "Gelişmiş ayarlar",
   "Gas amount": "Gaz miktarı",
@@ -95,7 +95,7 @@
   "Custom network settings saved.": "Uyarlanmış ağ ayarları kaydedildi.",
   "Make sure to always check what is the selected network before sending transactions.": "İşlemleri göndermeden önce hangi ağda olduğunuzdan emin olmak için her zaman kontrol edin.",
   "Network": "Ağ",
-  "Node host": "Düğüm noktası barındırma hizmeti",
+  "Node host": "Düğüm sunucusu",
   "Explorer API host": "Tarayıcı API barındırma",
   "Explorer URL": "URL adresi",
   "Wallet list": "Cüzdan listesi",
@@ -162,32 +162,32 @@
   "Lock": "Kilitle",
   "Enter password": "Şifreyi gir",
   "Login": "Giriş",
-  "Security Check": "Güvenlik doğrulaması",
+  "Security Check": "Güvenlik Doğrulaması",
   "Alright! Time to check if you got your words right!": "Pekala! Şimdi kurtarma sözcüklerini doğru şekilde aldığınızı kontrol etme zamanı!",
   "Select the words in the right order. Ready?": "Doğrulama sözcüklerini doğru şekilde sıralanması için seçin. Hazır mısınız?",
   "Ready!": "Hazır!",
-  "Something went wrong when creating encrypted wallet.": "Şifrelenmiş cüzdan oluşturulurken birşeyler yolunda gitmedi.",
+  "Something went wrong when creating encrypted wallet.": "Şifrelenmiş cüzdan oluşturulurken bir şeyler yolunda gitmedi.",
   "Select the words in the right order.": "Kurtarma sözcüklerini doğru sırayla seçin.",
   "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "Kurtarma sözcüklerini yanlış sıralama yaptığınız görülüyor ama meraklanmayın. Sözcüklerin yerlerini doğru sıralamada tekrar değiştirip sıralayabilirsiniz.",
-  "Great job! Remember to keep those words safe.": "Harika! Kurtarma sözcüklerini güvenli bir yere sakladığınızı unutmayın",
+  "Great job! Remember to keep those words safe.": "Harika iş! Bu kelimeleri güvende tutmayı unutmayın.",
   "Continue": "Devam",
   "Password is too weak": "Şifre çok zayıf",
-  "Insecure password": "Günensiz şifre",
+  "Insecure password": "Güvensiz şifre",
   "Wallet name is too short": "Cüzdan adı çok kısa",
   "Wallet name already taken": "Cüzdan adı daha önceden alınmış",
   "New wallet name": "Yeni cüzdan ismi",
   "New password": "Yeni şifre",
   "Retype password": "Şifreyi tekrar yazın",
-  "Passwords are different": "Şifre uyuşmazlığı",
+  "Passwords are different": "Şifreler uyuşmuyor",
   "Make sure to keep your password secured as it cannot be changed in the future.": "Şifrenizi güvenli şekilde sakladığınızdan emin olunuz, daha sonrasında değiştirilemeyeceğini bilin.",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium projesinin herhangi bir şekilde cüzdanınıza erişme şansı yoktur. Cüzdanınız yalnızca sizin sahipliğinizdedir.",
   "Back": "Geri",
   "Type your recovery phrase": "Kurtarma sözcüklerinizi yazın",
   "Error while importing wallet": "Cüzdan içe aktarılırken hata oluştu",
-  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Kurtarma sözcüklerini güvenli bir yere sakladığınızdan emin olun! Cüzdanınıza özel gizli kurtarma sözcükleridir.",
+  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Kurtarma sözcüklerini güvenli bir yere sakladığınızdan emin olun! Bunlar, cüzdanınızın gizli kurtarma sözcükleridir.",
   "All good? Let's continue!": "Herşey yolunda mı? Haydi devam edelim!",
-  "Everything is ready!": "Herşey hazır!",
-  "Welcome to Alephium.": "Alephium' a hoşgeldiniz.",
+  "Everything is ready!": "Her şey hazır!",
+  "Welcome to Alephium.": "Alephium'a hoş geldiniz.",
   "Let's go!": "Haydi başlayalım!",
   "welcomeScreenOneAddressPerGroupMessage": "Gelişmiş kullanıcı: <1>her bir gruba madencilik ya da defi için bir adres</1> ile başlamak ister misiniz?",
   "Show advanced options": "Gelişmiş seçenekleri göster",
@@ -199,13 +199,13 @@
   "I've copied the words, continue": "Sözcükleri kopyaladım, devam",
   "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Gelişmiş işlemler tecrübeli kullanıcılar için ayrılmıştır. \"Normal\" kullanıcının sıklıkla onları ihtiyaç duyulmaması halinde kullanımına gerek yoktur.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Görünüyor ki cüzdanınızda işlemin gönderilmesi için çok fazla UTXO mevcut. Lütfen öncelikle UTXO işlemlerini birleştiriniz. Bu çok az bir işlem ücretine mal olacaktır.",
-  "Welcome!": "Hoşgeldiniz!",
-  "Welcome back!": "Tekrar hoşgeldiniz!",
+  "Welcome!": "Hoş geldiniz!",
+  "Welcome back!": "Tekrar hoş geldiniz!",
   "Please choose a wallet and enter your password to continue.": "Lütfen devam etmek için cüzdanınızı seçip şifrenizi girin.",
   "Create / import a new wallet": "Yeni cüzdan oluştur / içe aktar",
   "(current)": "(şu anki)",
   "Default address for sending transactions.": "İşlemlerin gönderileceği varsayılan adres.",
-  "Error while fetching data for address {{ hash }}": "Adres {{ hash }} için veri işlenirken hata oluştu",
+  "Error while fetching data for address {{ hash }}": "Adres {{ hash }} için bekleyen işlemler işlenirken hata oluştu",
   "Error while fetching pending transactions for address {{ hash }}": "Adres {{ hash }} için bekleyen işlemler işlenirken hata oluştu",
   "Open in explorer": "Tarayıcıda aç",
   "Reduce": "Azalt",
@@ -239,7 +239,7 @@
   "Set lock time": "Kilit süresini ayarla",
   "Tweak gas settings": "Gaz seçeneklerini ayarla",
   "Call contract": "Sözleşmeyi çağır",
-  "Deploy contract": "Sözleşmeyi teslim et",
+  "Deploy contract": "Sözleşmeyi dağıt",
   "Issue token amount": "Belirlenen varlık miktarı",
   "Tokens to issue (optional)": "Yayınlanacak varlıklar (tercihe bağlı)",
   "Gas": "Gaz",
@@ -260,7 +260,7 @@
   "Address group": "Adres grubu",
   "all": "tümü",
   "Signer address": "İmzalayıcı adres",
-  "Select an address to sign with.": "İmzalayıcı adresi seçin.",
+  "Select an address to sign with.": "İmzalamak için bir adres seçin.",
   "Reject": "Reddet",
   "Approve": "Onayla",
   "Unable to convert the amount": "Miktar dönüştürülemiyor",
