--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -252,7 +252,7 @@
   "Paste what was copied from the dApp": "dApp tarafından kopyalananları yapıştır",
   "Connect": "Bağlan",
   "Approve the proposal to connect": "Bağlanma talebini onaylayın",
-  "Please review the following before authorizing the dApp": "dApp yetkilendirmesini tamamlamadan önce lütfen aşağıdakileri gözden geçirin",
+  "Please review the following before authorizing the dApp": "Lütfen dApp'i yetkilendirmeden önce aşağıdakileri inceleyin",
   "Name": "İsim",
   "URL": "URL",
   "Description": "Tanım",
