Fix script send modal build step

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -390,5 +390,6 @@
   "Confirm lock time": "Confirm lock time",
   "lockTimeConfirmation": "You chose to lock the assets until <1>{{ datetime }}</1>. That is approximately <3>{{ inTimeFromNow }}</3> from now. Are you sure you want to lock the assets until then?",
   "Analytics": "Analytics",
-  "Help us improve your experience!": "Help us improve your experience!"
+  "Help us improve your experience!": "Help us improve your experience!",
+  "Bytecode": "Bytecode"
 }
